# Snapshot-Distribuido

./: .gitignore  CMakeLists.txt  LICENSE  Limitacoes.md  README.md  Slides.pptx  Snapshots Distribuidos.pptx  TO_NOTICE.md  cluster.json  imgui.ini  presentation.md  requisitos.md  run.sh
imgui/: imgui.cpp  imgui.h  imgui_internal.h
src/comum/: config.hpp  json.hpp  parametros.hpp  tipos.hpp
src/entidade/: controle.cpp  controle.hpp  estado_negocio.hpp  main_entidade.cpp  work_stealing.cpp  work_stealing.hpp  worker.cpp  worker.hpp
src/monitor/: coletor_snapshot.cpp  coletor_snapshot.hpp  main_monitor.cpp  receptor_telemetria.cpp  receptor_telemetria.hpp  ui_imgui.cpp  ui_imgui.hpp
src/orquestrador/: main_orquestrador.cpp  spawner.cpp  spawner.hpp  topologia.cpp  topologia.hpp
src/rede/: canal.cpp  canal.hpp  fila_bloqueante.hpp  protocolo.cpp  protocolo.hpp  socket_tcp.cpp  socket_tcp.hpp  telemetria_udp.cpp  telemetria_udp.hpp
src/snapshot/: chandy_lamport.cpp  chandy_lamport.hpp
